<resources>
    <!--app name-->
    <string name="app_name">Choose Helper</string>

    <!--facebook-->
    <string name="facebook_app_id">1109390425777638</string>

    <!--actions-->
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_change_password">Change password</string>
    <string name="action_forward">Forward</string>
    <string name="action_done">Done</string>

    <!--navigation drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_nav_profile">Profile</string>
    <string name="action_nav_settings">Settings</string>
    <string name="action_nav_help">Help</string>
    <string name="action_nav_logout">Logout</string>

    <!-- toasts -->
    <string name="toast_empty_fields">You did not fill all fields</string>
    <string name="toast_error_try_later">Error! Please, try later</string>
    <string name="toast_gp_sign_in_error">Sign in error: </string>
    <string name="toast_no_internet">No internet connection</string>
    <string name="toast_cannot_search">Cannot search without internet</string>
    <string name="toast_click_again_exit">Click again for exit</string>
    <string name="toast_empty_comment">You can\'t post an empty comment</string>
    <string name="toast_cannot_like_own">You can\'t like your own compares</string>
    <string name="toast_cannot_like_closed">This compare has been closed. You cannot like closed compare</string>
    <string name="toast_cannot_comment_closed">This compare has been closed. You cannot comment closed compare</string>
    <string name="toast_didnt_enter_email">You didn\'t enter email</string>
    <string name="toast_different_passwords">Passwords are different</string>
    <string name="toast_error_message">Error</string>
    <string name="toast_wrong_email">Wrong email</string>
    <string name="toast_wrong_password">Wrong password</string>

    <!--hints-->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_enter_comment">Enter your comment</string>
    <string name="hint_new_password">Enter new password</string>
    <string name="hint_repeat_new_password">Repeat new password</string>
    <string name="search_hint_compares">Search compares…</string>
    <string name="search_hint_user_compares">Search user compares…</string>
    <string name="hint_full_name">Full name</string>
    <string name="hint_repeat_password">Repeat password</string>
    <string name="hint_question">Question</string>
    <string name="hint_variants">Variants</string>
    <string name="hint_description">Description</string>
    <string name="hint_old_password">Old password</string>

    <!--progress dialogs-->
    <string name="pd_msg_wait_please">Wait please…</string>
    <string name="pd_msg_authenticating">Authenticating…</string>

    <!--labels-->
    <string name="label_followings">Followings</string>
    <string name="label_followers">Followers</string>
    <string name="label_compares">Compares</string>
    <string name="label_new_compare">New compare</string>
    <string name="label_preview">Preview</string>
    <string name="label_details">Details</string>
    <string name="label_edit_profile">Edit profile</string>
    <string name="label_change_password">Change password</string>
    <string name="label_help">Help</string>
    <string name="label_settings">Settings</string>
    <string name="label_log_in_using">Log In Using</string>
    <string name="label_create_an_account">Create an Account</string>
    <string name="label_photo">Photo</string>
    <string name="label_already_have_an_account">Already have an Account?</string>
    <string name="label_reset_password">Reset password</string>

    <!--button labels-->
    <string name="btn_label_login">Login</string>
    <string name="btn_label_follow">Follow</string>
    <string name="btn_label_un_follow">UnFollow</string>
    <string name="btn_label_forgot_password">Forgot password?</string>
    <string name="btn_label_add">Add</string>
    <string name="btn_label_sign_up">Sign up</string>

    <!--others labels-->
    <string name="tab_label_all">All</string>
    <string name="tab_label_followings">Followings</string>

    <!--settings labels-->
    <string name="settings_no_categories">No categories selected</string>
    <string name="settings_number_of_compares">Show %s compares in main</string>

    <!--settings keys-->
    <string name="settings_numbers_of_compares">settings_numbers_of_compares</string>
    <string name="settings_language">settings_language</string>
    <string name="settings_categories">settings_categories</string>
    <string name="settings_notifications_liked">settings_notifications_liked</string>
    <string name="settings_notifications_commented">settings_notifications_commented</string>
    <string name="settings_notifications_f_new_compare">settings_notifications_fnc</string>

    <!--dialogs-->
    <string name="dialog_change_pass">Password has been changed</string>
    <string name="dialog_btn_send_email">Reset</string>
    <string name="dialog_btn_cancel">Cancel</string>
    <string name="dialog_reset_sent">Sent…</string>
    <string name="dialog_photo_title">Select picture for variant</string>
    <string name="dialog_photo_avatar">Select picture for avatar</string>

    <!--image descriptions-->
    <string name="img_description_avatar">Avatar</string>
    <string name="img_description_icon_more">Icon more</string>

    <!--compare statuses-->
    <string name="status_open">Open</string>
    <string name="status_closed">Closed</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="no_image">No image for this variant</string>
    <string name="no_followers">No followers</string>
    <string name="no_followings">No followings</string>
    <string name="no_compares">No compares</string>

    <!--Arrays-->
    <string-array name="photo_variants">
        <item>Get from gallery</item>
        <item>Make a photo</item>
    </string-array>

    <string-array name="categories">
        <item>Entertainment</item>
        <item>Transport</item>
        <item>Clothes</item>
        <item>Eating</item>
        <item>Places</item>
        <item>Movies</item>
        <item>Other</item>
    </string-array>

    <string-array name="categories_codes">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <string-array name="numbers_of_compares">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>50</item>
    </string-array>

    <string-array name="languages">
        <item>English</item>
        <item>Українська</item>
        <item>Русский</item>
    </string-array>

    <string-array name="notifications">
        <item>On</item>
        <item>Off</item>
    </string-array>

    <string-array name="notifications_code">
        <item>1</item>
        <item>0</item>
    </string-array>

    <!-- HELP -->

    <string-array name="help_titles">
        <item>What app do?</item>
        <item>What is a compare?</item>
        <item>Create compare</item>
        <item>Search</item>
        <item>Use filters</item>
        <item>Followers</item>
    </string-array>

    <string-array name="help_text">
        <item>Choose Helper can help you make chose with two variants. Just create compare
        and look what other users think about it.</item>
        <item>Compare display a choose that you can not do. Compare has a question and variants
            description. Also you can add a photo.</item>
        <item>To create compare click circle plus-button and provide required data such as
        question, variants title and photo as you wish.</item>
        <item>You can search compare by variants title as on screen below.</item>
        <item>Open application settings and chose categories of compares you interested in.
       Also you can pick compares count that will be display on main screen.</item>
        <item>Following users if their compares are interesting for you.</item>
    </string-array>

</resources>