<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_edit_profile"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:title="@string/label_edit_profile"
        app:titleTextColor="@android:color/white" />

    <ImageView
        android:id="@+id/edit_profile_iv_avatar"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/edit_profile_et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:inputType="text"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_change_password"
        android:textColor="@color/colorTextLink"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edit_profile_et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="12dp"
        android:hint="@string/hint_new_password"
        android:inputType="textPassword"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edit_profile_et_repeat_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_repeat_new_password"
        android:inputType="textPassword"
        android:textSize="16sp" />

    <Button
        android:id="@+id/edit_profile_btn_change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>