<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundPrimary"
    android:orientation="vertical"
    tools:context=".screens.activities.AddCompareActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/add_compare_container_sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_8"
                android:layout_marginRight="@dimen/padding_8"
                android:layout_marginTop="@dimen/margin_12"
                android:textColorHint="@color/colorHint"
                android:textSize="@dimen/medium_text_size">

                <EditText
                    android:id="@+id/add_compare_et_question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_question"
                    android:maxLength="40" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/add_compare_tv_label_variants"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_18"
                android:text="@string/hint_variants"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/text_size_normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_12"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/add_compare_first_img"
                        android:layout_width="@dimen/image_size"
                        android:layout_height="@dimen/image_size"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/standard_photo" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_8"
                        android:layout_marginRight="@dimen/padding_8"
                        android:layout_marginTop="@dimen/margin_10"
                        android:textColorHint="@color/colorHint"
                        android:textSize="@dimen/medium_text_size">

                        <EditText
                            android:id="@+id/add_compare_et_first_variant"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_description"
                            android:maxLength="40" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/add_compare_second_img"
                        android:layout_width="@dimen/image_size"
                        android:layout_height="@dimen/image_size"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/standard_photo" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_8"
                        android:layout_marginRight="@dimen/padding_8"
                        android:layout_marginTop="@dimen/margin_10"
                        android:textColorHint="@color/colorHint"
                        android:textSize="@dimen/medium_text_size">

                        <EditText
                            android:id="@+id/add_compare_et_second_variant"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_description"
                            android:maxLength="40" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

            </LinearLayout>

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/add_compare_category_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_12"
                android:entries="@array/categories"
                android:minWidth="@dimen/spinner_min_width"
                android:spinnerMode="dialog" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
